--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "google-ads-api": "^17.1.0-rest-beta",
     "google-auth-library": "^9.15.1",
     "googleapis": "^144.0.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
-    "swagger-jsdoc": "^6.2.8",
+    "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^5.0.0",
     "tslib": "^2.8.0",
     "ws": "^8.18.1"
@@ -43,6 +44,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
+    "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
