--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
-PORT=5000
-MONGODB_URI=mongodb://localhost:27017/yapily-integration
-YAPILY_CLIENT_ID=your_yapily_client_id
-YAPILY_CLIENT_SECRET=your_yapily_client_secret
+# Server Configuration
+PORT=8080
+
+# Database Configuration
+MONGODB_URI=<mongodb-connection-string>
+
+
+# Yapily API Configuration
+YAPILY_CLIENT_ID=<yapily-client-id>
+YAPILY_CLIENT_SECRET=<yapily-client-secret>
 YAPILY_API_URL=https://api.yapily.com
-YAPILY_CALLBACK_URL=http://localhost:5000/api/auth/callback 
+YAPILY_CALLBACK_URL=http://localhost:8080/api/yapily/auth/callback
+
+JWT_SECRET=<jwt-secret>
+JWT_REFRESH_SECRET=<jwt-refresh-secret>
