--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "author": "Haysam Bin Tahir",
   "license": "ISC",
   "dependencies": {
-    "@types/multer": "^1.4.12",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
@@ -23,20 +22,12 @@
     "dotenv": "^16.3.1",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
-    "google-ads-api": "^17.1.0-rest-beta",
-    "google-auth-library": "^9.15.1",
-    "googleapis": "^144.0.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.16",
-    "pg": "^8.13.1",
-    "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^5.0.0",
-    "tslib": "^2.8.0",
-    "ws": "^8.18.1"
+    "tslib": "^2.8.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -48,11 +39,8 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
-    "@types/nodemailer": "^6.4.17",
-    "@types/pg": "^8.11.10",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
-    "@types/ws": "^8.5.14",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "ts-jest": "^29.1.1",
